Fix cardbar on mobile

--- a/styles/partials/home-looged-admin.css
+++ b/styles/partials/home-looged-admin.css
@@ -416,7 +416,7 @@ a {
 	align-items: center;
 	border-radius: 6px;
 	border-style: none;
-	margin-left: 27px;
+
 }
 .card-grup .card-bigger .card {
 	border-top: 7px solid #008fff;
